feat: agregar métodos CRUD a PedidoService y DetallePedidoService